# src/dtos/productRank.dto.ts
@@ -1,0 +1,12 @@
+import { IsNumber } from 'class-validator';
+
+export class CreateProductRankDto {
+  @IsNumber()
+  public productId: number;
+  @IsNumber()
+  public month: number;
+  @IsNumber()
+  public year: number;
+  @IsNumber()
+  public quantity: number;
+}
